--- a/client/templates/login.html
+++ b/client/templates/login.html
@@ -1,13 +1,52 @@
 <!DOCTYPE html>
 <html lang="en">
-<body>
-  <p>Select service to login</p>
-  <ul>
-    <!-- {{- range $p := .Providers}} -->
-    <!-- <li><a href="/auth/login/{{ $p.Name }}">{{ $p.Name }}</a></li> -->
-    <li><a href="/auth/login/github">Github</a></li>
 
-    <!-- {{- end}} -->
-  </ul>
+<head>
+
+  <title>Starred Search</title>
+
+  <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
+  <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap-theme.min.css">
+  <link rel="stylesheet" type="text/css" href="/styles/octicons/octicons.css">
+
+  <link rel="stylesheet" href="/styles/index.css">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+</head>
+
+<body>
+
+<div class="container">
+
+  <!--header-->
+  <div class="row" style="padding-top:44px">
+    <div class="col-xs-12 text-center" style="padding-bottom:32px">
+      <span class="mega-octicon octicon-octoface"></span>
+      <!-- <span class="mega-octicon octicon-mark-github" style="font-size:64px"></span>
+      <span class="mega-octicon octicon-star" style="font-size:64px; padding-left:24px; padding-right:24px"></span>
+      <span class="mega-octicon octicon-search" style="font-size:64px"></span> -->
+    </div>
+  </div>
+
+
+  <!-- <p>Select service to login</p> -->
+  <h2 class="col-xs-12 text-center text-success" style="margin-bottom:0">search github starred repos</h2>
+  <h5 class="col-xs-12 text-center text-success" style="margin-top:0">search readmes, description, homepage and repo_url</h5>
+  <div class="row" style="padding:96px 0 16px 0">
+    <div class="col-xs-offset-2 col-xs-8 col-md-offset-3 col-md-6">
+      <h4 class="text-center">Authorize GitHub Access to identify your account and avoid rate-limited anonymous GitHub API requests.</h4>
+      <!-- <h6>Starred Search requests no permissions other than read access to public data.</h6>
+      <h6>Authorization is used to identify your account and avoid rate-limited anonymous GitHub API requests.</h6> -->
+    </div>
+
+  </div>
+
+  <div class="row">
+    <div class="col-xs-12 text-center">
+      <button class="btn btn-success" onclick="window.location.href = '/auth/login/github'">Authorize</button>
+
+    </div>
+  </div>
+
+  </div>
 </body>
 </html>
