--- a/client/styles/index.css
+++ b/client/styles/index.css
@@ -1,3 +1,16 @@
 .activatedColor {
     color: green;
 }
+
+.flex-column{
+        flex: 1 1 0%;
+   max-width: 100%;
+  /*max-height: 0%; firefox will has strange UI for 0% */
+  box-sizing: border-box;
+}
+
+.layout-column-start-center {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
