add redux, css/scss relative packages.

--- a/client/styles/index.scss
+++ b/client/styles/index.scss
@@ -1,3 +1,11 @@
+@import 'baseStyles/baseStyles';
+
+// BEM style
+@import 'blocks/layout/layout';
+@import 'blocks/page/page';
+@import 'blocks/def-list/def-list';
+@import 'blocks/text/text';
+
 .activatedColor {
     color: green;
 }
