--- a/client/templates/login.html
+++ b/client/templates/login.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap-theme.min.css">
   <link rel="stylesheet" type="text/css" href="/styles/octicons/octicons.css">
 
-  <link rel="stylesheet" href="/styles/index.css">
+  <!--<link rel="stylesheet" href="/styles/login.css">-->
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 
