add material-ui package, google font, adjust css and combine to reducers.

--- a/client/styles/index.scss
+++ b/client/styles/index.scss
@@ -6,8 +6,8 @@
 @import 'blocks/def-list/def-list';
 @import 'blocks/text/text';
 
-.activatedColor {
-    color: green;
+.loading-text {
+    font-size: 32px
 }
 
 .flex-column{
