--- a/client/templates/login.html
+++ b/client/templates/login.html
@@ -29,16 +29,16 @@
 
 
   <!-- <p>Select service to login</p> -->
-  <h2 class="col-xs-12 text-center text-success" style="margin-bottom:0">search github starred repos</h2>
-  <h5 class="col-xs-12 text-center text-success" style="margin-top:0">search readmes, description, homepage and repo_url</h5>
-  <div class="row" style="padding:96px 0 16px 0">
+  <h2 class="col-xs-12 text-center text-success" style="margin-bottom:0">Search GitHub</h2>
+  <h5 class="col-xs-12 text-center text-success" style="margin-top:0">Target: Readme, description, homepage and URL of the repository</h5>
+  <!-- <div class="row" style="padding:96px 0 16px 0">
     <div class="col-xs-offset-2 col-xs-8 col-md-offset-3 col-md-6">
       <h4 class="text-center">Authorize GitHub Access to identify your account and avoid rate-limited anonymous GitHub API requests.</h4>
-      <!-- <h6>Starred Search requests no permissions other than read access to public data.</h6>
-      <h6>Authorization is used to identify your account and avoid rate-limited anonymous GitHub API requests.</h6> -->
+      <h6>Starred Search requests no permissions other than read access to public data.</h6>
+      <h6>Authorization is used to identify your account and avoid rate-limited anonymous GitHub API requests.</h6>
     </div>
 
-  </div>
+  </div> -->
 
   <div class="row">
     <div class="col-xs-12 text-center">
