--- a/client/styles/index.scss
+++ b/client/styles/index.scss
@@ -22,3 +22,11 @@
   flex-direction: column;
   align-items: center;
 }
+
+.flex-row{
+  flex: 1 1 0%;
+	/*max-width: 0%;*/
+  max-height: 100%;
+
+  box-sizing: border-box;
+}
