Tune UI and fix the bug when re-indexing.

--- a/client/templates/login.html
+++ b/client/templates/login.html
@@ -3,7 +3,7 @@
 
 <head>
 
-  <title>Starred Search</title>
+  <title>GitHub Search</title>
 
   <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
   <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap-theme.min.css">
@@ -29,8 +29,8 @@
 
 
   <!-- <p>Select service to login</p> -->
-  <h2 class="col-xs-12 text-center text-success" style="margin-bottom:0">Search GitHub</h2>
-  <h5 class="col-xs-12 text-center text-success" style="margin-top:0">Target: Readme, description, homepage and URL of the repository</h5>
+  <h2 class="col-xs-12 text-center text-success" style="margin-bottom:0">Full-Text Search GitHub (missing function on GitHub)</h2>
+  <h5 class="col-xs-12 text-center text-success" style="margin-top:0">Target: Readme, description, homepage and URL of your starred repository</h5>
   <!-- <div class="row" style="padding:96px 0 16px 0">
     <div class="col-xs-offset-2 col-xs-8 col-md-offset-3 col-md-6">
       <h4 class="text-center">Authorize GitHub Access to identify your account and avoid rate-limited anonymous GitHub API requests.</h4>
