--- a/client/templates/login.html
+++ b/client/templates/login.html
@@ -31,14 +31,14 @@
   <!-- <p>Select service to login</p> -->
   <h2 class="col-xs-12 text-center text-success" style="margin-bottom:0">Full-Text Search GitHub (missing function on GitHub)</h2>
   <h5 class="col-xs-12 text-center text-success" style="margin-top:0">Target: Readme, description, homepage and URL of your starred repository</h5>
-  <!-- <div class="row" style="padding:96px 0 16px 0">
+  <div class="row" style="padding:96px 0 16px 0">
     <div class="col-xs-offset-2 col-xs-8 col-md-offset-3 col-md-6">
-      <h4 class="text-center">Authorize GitHub Access to identify your account and avoid rate-limited anonymous GitHub API requests.</h4>
-      <h6>Starred Search requests no permissions other than read access to public data.</h6>
-      <h6>Authorization is used to identify your account and avoid rate-limited anonymous GitHub API requests.</h6>
+      <h4 class="text-center">GitHub site only supplies the function to search repo-descripton and also only exact pharse match, not support A OR B search.</h4>
+      <!-- <h6>Starred Search requests no permissions other than read access to public data.</h6>
+      <h6>Authorization is used to identify your account and avoid rate-limited anonymous GitHub API requests.</h6> -->
     </div>
 
-  </div> -->
+  </div>
 
   <div class="row">
     <div class="col-xs-12 text-center">
