--- a/client/templates/login.html
+++ b/client/templates/login.html
@@ -33,7 +33,7 @@
   <h5 class="col-xs-12 text-center text-success" style="margin-top:0">Target: Readme, description, homepage and URL of your starred repository</h5>
   <div class="row" style="padding:96px 0 16px 0">
     <div class="col-xs-offset-2 col-xs-8 col-md-offset-3 col-md-6">
-      <h4 class="text-center">GitHub site only supplies the function to search repo-descripton and also only exact pharse match, not support A OR B search.</h4>
+      <h4 class="text-center">GitHub site only supplies the function to search repo-descripton and also only exact pharse match. This site suppport both types. Type <em>"A B"</em> for pharse <em>A B</em> and type <em>A B</em> for sqeunce not important case.</h4>
       <!-- <h6>Starred Search requests no permissions other than read access to public data.</h6>
       <h6>Authorization is used to identify your account and avoid rate-limited anonymous GitHub API requests.</h6> -->
     </div>
